After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710658 - Fix seed_make_exception format string
Fix seed_make_exception format string
Status: RESOLVED FIXED
Product: seed
Classification: Bindings
Component: libseed
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: seed-maint
seed-maint
Depends on:
Blocks:
 
 
Reported: 2013-10-22 15:43 UTC by Laurent Bigonville
Modified: 2013-10-28 08:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (753 bytes, patch)
2013-10-22 15:43 UTC, Laurent Bigonville
none Details | Review

Description Laurent Bigonville 2013-10-22 15:43:38 UTC
Created attachment 257855 [details] [review]
Patch

Hi,

seed 3.8.1 is FTBFS when compiled with the -Werror=format-security

Please find the following patch that fix the build
Comment 1 Alan Knowles 2013-10-28 08:07:58 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.