Bug 710658 - Fix seed_make_exception format string

https://bugzilla.gnome.org/show_bug.cgi?id=710658

Fixes seed 3.8.1 which is FTBFS when compiled with the -Werror=format-security